fixed typo in comment

--- a/tw_mle_exercise2.ipynb
+++ b/tw_mle_exercise2.ipynb
@@ -569,7 +569,7 @@
     "    # Prepare a train/test set split\n",
     "    X_train, X_test, y_train, y_test = train_test_split(data, target, test_size=0.33, random_state=(randomState+1))\n",
     "\n",
-    "    # train the bayes model\n",
+    "    # train the perceptron\n",
     "    classifier = linear_model.Perceptron()\n",
     "    classifier.random_state = randomState\n",
     "    start_time_train = time.time()\n",
@@ -790,7 +790,7 @@
     "        min_samples_leaf = argumentTuple[1]\n",
     "        splitting_approach = argumentTuple[2]\n",
     "\n",
-    "        # train the k-NN\n",
+    "        # train the decision tree\n",
     "        classifier = tree.DecisionTreeClassifier(criterion = 'gini',\n",
     "                                                 max_depth = max_depth,\n",
     "                                                 min_samples_leaf = min_samples_leaf,\n",
