fixed line breaks

--- a/tw_mle_exercise2.ipynb
+++ b/tw_mle_exercise2.ipynb
@@ -765,8 +765,8 @@
     "\n",
     "def parse_argument_tuple_as_string(argumentsTuple):\n",
     "    return \"max Depth: \" + str(argumentsTuple[0])  + \\\n",
-    "           \"\\n, min Samples/Leaf: \" + str(argumentsTuple[1]) + \\\n",
-    "           \"\\n, Splitting: \" + argumentsTuple[2]\n",
+    "           \", min Samples/Leaf: \" + str(argumentsTuple[1]) + \\\n",
+    "           \", Splitting: \" + argumentsTuple[2]\n",
     "\n",
     "decision_tree_results = []\n",
     "\n",
